// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should be rendered correctly 1`] = `
<div
  aria-expanded={false}
  className="container root mode-block"
>
  <div
    className="uui-accordion-toggler"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-accordion-toggle-container"
    >
      <div
        className="uui-accordion-title"
      >
        test
      </div>
      <div
        className="container uui-icon uui-enabled arrow"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should be rendered correctly with extra props 1`] = `
<div
  aria-expanded={false}
  className="container root mode-inline"
>
  <div
    className="uui-accordion-toggler"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-accordion-toggle-container"
    >
      <div
        className="uui-accordion-title"
      >
        test
      </div>
      <div
        className="container uui-icon uui-enabled arrow"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
  </div>
</div>
`;
